# Anicca-Doc-View

./: LICENSE  README.md  package-lock.json  package.json  vitest.browser.config.ts  vitest.config.ts
engine/: Cargo.toml  README.md  build.ps1
engine/examples/: debug_blocks.rs  render_pages.rs
engine/src/: docx.rs  lib.rs  model.rs  render.rs
scripts/: bundle-worker.js  copy-wasm.js
src/: AniccaClient.ts  AniccaViewer.ts  index.ts  meta-url.ts
src/ui/framework/: component.ts  events.ts
src/ui/viewer/: a11y.ts  effects.ts  shell.ts  state.ts  styles-inline.ts  styles.css  transition-gl.ts  transition.ts
src/ui/viewer/annotation/: LinkRenderer.ts  MarkupRenderer.ts  TextRenderer.ts  render.ts  types.ts  utils.ts
src/ui/viewer/components/: AnnotationPanel.ts  AttachmentsPanel.ts  BookmarksPanel.ts  Branding.ts  ColorSelect.ts  FloatingToolbar.ts  FontsPanel.ts  LayersPanel.ts  LeftPanel.ts  LoadingOverlay.ts  NumberInput.ts  OutlinePanel.ts  PasswordDialog.ts  PrintDialog.ts  RightPanel.ts  SearchPanel.ts  SheetTabBar.ts  Spread.ts  SubToolbar.ts  ThumbnailPanel.ts  Toolbar.ts  ViewModeMenu.ts  Viewport.ts
src/ui/viewer/text/: render.ts  selection.ts
src/ui/viewer/tools/: AnnotationDrawController.ts  AnnotationSelectController.ts  ViewToolController.ts
src/wasm/: LICENSE  anicca-engine.d.ts  anicca-engine.js  anicca-engine_bg.wasm.d.ts
src/worker/: WorkerClient.ts  index.ts  worker.ts
test/browser/: annotation-hit-test.test.ts  annotation.test.ts  download-print-events.test.ts  load.test.ts  vite-env.d.ts
